--- a/app/blogengine/blog/templates/blog/index.html
+++ b/app/blogengine/blog/templates/blog/index.html
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
                 <p class="card-text">{{ post.body|truncatewords:15 }}</p><!-- truncateword  это фильтр Django обрезает до 15 слов -->
-                <a href="{% url 'post_detail_url' slug=post.slug %}" class="btn btn-primary">Read</a>
+                <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read</a>
             </div>
         </div>
 
