--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -1,9 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>
         {% block title %}
             Blog Engine
@@ -25,7 +36,7 @@
                 <a class="nav-link" href="{% url 'posts_list_url' %}">Posts</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'tags_list_url'%}">Tags</a>
+                <a class="nav-link" href="{% url 'tags_list_url' %}">Tags</a>
             </li>
 
             <li class="nav-item">
@@ -39,15 +50,21 @@
     </div>
 </nav>
 
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-6 offset-md-2">
-                {% block content %}
-                    There is no any content
-                {% endblock %}
-            </div>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-6 offset-md-2">
+            {% block content %}
+                There is no any content
+            {% endblock %}
         </div>
     </div>
+</div>
+
+<div class="admin-panel align-items-center">
+    <a href="/admin" class="btn btn-outline-info">Admin</a>
+    {% block admin-panel %}
+    {% endblock %}
+</div>
 
 </body>
 </html>
