--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -56,6 +56,48 @@
             {% block content %}
                 There is no any content
             {% endblock %}
+            <nav aria-label="...">
+                <ul class="pagination">
+
+                    {% if page_object.has_previous %}
+                        <li class="page-item enabled">
+                            <a class="page-link" href="?page={{ page_object.previous_page_number }}" tabindex="-1"
+                               aria-disabled="true">Previous</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1"
+                               aria-disabled="true">Previous</a>
+                        </li>
+                    {% endif %}
+
+
+                    {% for n in page_object.paginator.page_range %}
+                        {% if page_object.number == n %}
+                            <li class="page-item active" aria-current="page">
+                                <a class="page-link" href="?page={{ n }}">{{ n }}<span class="sr-only">(current)</span></a>
+                            </li>
+                        {% elif n > page_object.number|add:-3 and n < page_object.number|add:3%}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+
+
+                    {% if page_object.has_next %}
+                        <li class="page-item enabled">
+                            <a class="page-link" href="?page={{ page_object.next_page_number }}" tabindex="-1"
+                               aria-disabled="true">Next</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1"
+                               aria-disabled="true">Next</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
